--- a/studenrecordsystem.csproj
+++ b/studenrecordsystem.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdressClass.cs" />
     <Compile Include="Operations.cs" />
     <Compile Include="Utils.cs" />
     <Compile Include="Program.cs" />
