--- a/studenrecordsystem.csproj
+++ b/studenrecordsystem.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AdressClass.cs" />
+    <Compile Include="Database.cs" />
     <Compile Include="Operations.cs" />
     <Compile Include="Utils.cs" />
     <Compile Include="Program.cs" />
