--- a/studenrecordsystem.csproj
+++ b/studenrecordsystem.csproj
@@ -50,23 +50,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AddOperations.cs" />
-    <Compile Include="AdressClass.cs" />
-    <Compile Include="AdressOperations.cs" />
+    <Compile Include="Log.cs" />
+    <Compile Include="Model\User.cs" />
+    <Compile Include="Operations\SqlOperations\GeneralSqlConnection.cs" />
+    <Compile Include="Operations\SqlOperations\UserSqlOperations.cs" />
+    <Compile Include="Users\LoginControl.cs" />
+    <Compile Include="Users\SignUp.cs" />
+    <Compile Include="Operations\AddOperations.cs" />
+    <Compile Include="Model\Adress.cs" />
+    <Compile Include="Operations\AdressOperations.cs" />
     <Compile Include="Database.cs" />
-    <Compile Include="RemoveOperations.cs" />
-    <Compile Include="SearchFindPrintOperations.cs" />
-    <Compile Include="SqlOperations.cs" />
-    <Compile Include="StudentOperations.cs" />
-    <Compile Include="UpdateOperations.cs" />
-    <Compile Include="Utils.cs" />
+    <Compile Include="Operations\RemoveOperations.cs" />
+    <Compile Include="Operations\SearchFindPrintOperations.cs" />
+    <Compile Include="Operations\SqlOperations\ProgramSqlOperations.cs" />
+    <Compile Include="Operations\StudentOperations.cs" />
+    <Compile Include="Operations\UpdateOperations.cs" />
+    <Compile Include="Utils\Utils.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Student.cs" />
+    <Compile Include="Model\Student.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
+    <None Include="Config\App.config" />
+    <None Include="Config\packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
