--- a/Config/App.config
+++ b/Config/App.config
@@ -5,5 +5,6 @@
     </startup>
   <appSettings>
     <add key="logPath" value="C:\Users\emre.bulkurcuoglu\Desktop\studenrecordsystem\studenrecordsystem\log.txt"/>
+    <add key="databaseString" value="Data Source=EM-SEMRA-K;Initial Catalog=master;Integrated Security=True"/>
   </appSettings>
 </configuration>
