--- a/studenrecordsystem.csproj
+++ b/studenrecordsystem.csproj
@@ -40,7 +40,9 @@
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -50,12 +52,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Connected Services\SearchWebService\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="Log.cs" />
     <Compile Include="Model\User.cs" />
     <Compile Include="Operations\SqlOperations\GeneralSqlConnection.cs" />
     <Compile Include="Operations\SqlOperations\UserSqlOperations.cs" />
-    <Compile Include="Users\LoginControl.cs" />
-    <Compile Include="Users\SignUp.cs" />
+    <Compile Include="Operations\Users\LoginControl.cs" />
+    <Compile Include="Operations\Users\SignUp.cs" />
     <Compile Include="Operations\AddOperations.cs" />
     <Compile Include="Model\Adress.cs" />
     <Compile Include="Operations\AdressOperations.cs" />
@@ -65,15 +72,55 @@
     <Compile Include="Operations\SqlOperations\ProgramSqlOperations.cs" />
     <Compile Include="Operations\StudentOperations.cs" />
     <Compile Include="Operations\UpdateOperations.cs" />
-    <Compile Include="Utils\Utils.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Model\Student.cs" />
+    <Compile Include="Utils\Utils.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="Config\App.config" />
     <None Include="Config\packages.config" />
+    <None Include="Connected Services\SearchWebService\SearhWebService.wsdl" />
+    <None Include="Connected Services\SearchWebService\studenrecordsystem.SearchWebService.Adress.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Connected Services\SearchWebService\studenrecordsystem.SearchWebService.FindRecordResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Connected Services\SearchWebService\studenrecordsystem.SearchWebService.GetAdressResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Connected Services\SearchWebService\studenrecordsystem.SearchWebService.GetStudentResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Connected Services\SearchWebService\studenrecordsystem.SearchWebService.HowManyAdressResponse.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Connected Services\SearchWebService\studenrecordsystem.SearchWebService.Student.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadataStorage Include="Connected Services\SearchWebService\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\SearchWebService\SearhWebService.disco" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\SearchWebService\configuration91.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\SearchWebService\configuration.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Connected Services\SearchWebService\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
